# ollama-lab

./: .gitignore  .prettierignore  .prettierrc.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  bun.lockb  eslint.config.mjs  index.html  lucide-optimizer.ts  package.json  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.opencode/commands/: bump-version.md  issues.md  learn.md
api/: Cargo.toml
api/src/: api.rs  lib.rs
api/src/api/: ollama.rs
axum/: Cargo.toml
axum/src/: lib.rs
db-desktop/: Cargo.toml  diesel.toml
db-desktop/migrations/: 20240803061838_init.sql
db-desktop/migrations/2024-07-29-075855_init/: down.sql  up.sql
db-desktop/src/: error.rs  lib.rs  model.rs  schema.rs
db-desktop/src/model/: bubble.rs  session.rs  user.rs
db-multiuser-pg/: Cargo.toml
desktop-server/: Cargo.toml
migrations/: 20250115071037_init.sql  20250225030944_add-image-table.sql
scripts/: bindgen.ts
src/: AGENTS.md  app.css  app.html  constants.ts  index.tsx  layout.tsx  schema-sqlite.ts
src-multiuser-server/: Cargo.toml
src-svelte/: app.css  app.html
src-svelte/lib/commands/: chats.ts  sessions.ts
src-svelte/lib/components/: init-alert.svelte
src-svelte/lib/components/app-bar/: tab-link.svelte
src-svelte/lib/components/code-block/: code-block.svelte  index.ts
src-svelte/lib/components/custom-ui/: kbd.svelte  progress-size.svelte  tag-badge.svelte
src-svelte/lib/components/models/: index.ts  model-details.svelte
src-svelte/lib/components/sessions/: chat-panel.svelte
src-svelte/lib/models/: session.ts  settings.ts
src-svelte/lib/settings/components/: settings-section-item.svelte
src-svelte/lib/settings/names/: en.ts
src-svelte/lib/stores/: app-state.ts  chats.ts  images.ts  prompt-input.ts  settings.ts
src-svelte/lib/utils/: init.ts  strings.ts
src-svelte/routes/: +layout.svelte  +layout.ts
src-tauri/: AGENTS.md  Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/capabilities/: default.json  default.toml
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250115071037_init.sql  20250225030944_add-image-table.sql  20250310014022_add-h2h.sql  20250404055301_mcp.sql  20260305145345_add-chat-metrics.sql
src-tauri/permissions/: data-access.toml  http-local.toml
src-tauri/src/: api.rs  app_state.rs  chat_gen.rs  cli.rs  command.rs  commands.rs  db.rs  encoding.rs  error.rs  errors.rs  events.rs  image.rs  lib.rs  main.rs  mcp_config.rs  models.rs  networking.rs  paths.rs  responses.rs  settings.rs  strings.rs  utils.rs
src-tauri/src/chat_gen/: ego.rs  utils.rs
src-tauri/src/command/: chat.rs  model.rs  session.rs
src-tauri/src/commands/: agent_templates.rs  agents.rs  chats.rs  images.rs  init.rs  models.rs  sessions.rs  settings.rs  system_prompts.rs
src-tauri/src/commands/agents/: selected.rs
src-tauri/src/commands/chats/: chat_history.rs
src-tauri/src/commands/models/: search.rs
src-tauri/src/image/: cleanup.rs
src-tauri/src/models/: agent.rs  chat.rs  h2h_agent.rs  images.rs  mcp.rs  models.rs  session.rs
src-tauri/src/models/mcp/: transport_type.rs
src-tauri/src/models/session/: mode.rs
src-tauri/src/responses/: llm_streams.rs  tree.rs
src-tauri/src/responses/tree/: models.rs
src-tauri/src/settings/: appearance.rs  error.rs  ollama.rs  themes.rs  title_generation.rs
src-tauri/src/utils/: chats.rs  config.rs  connections.rs  crud.rs  h2h.rs  http.rs  images.rs  length_index.rs  mcp.rs  sessions.rs  system_prompt.rs  vec_move.rs
src/lib/: command.ts  commands.ts  db.ts  markdown-display.css  markdown.ts  networking.ts
src/lib/commands/: agent-templates.ts  agents.ts  chat-history.ts  chats.ts  image.ts  init.ts  models.ts  sessions.ts  settings.ts  system-prompts.ts
src/lib/components/: app-bar.svelte  chatbox.svelte  default-toaster.tsx  header.svelte  model-selection-panel.svelte  model-selector.svelte  model-zoo.svelte  providers.tsx  sector.svelte  settings-page.svelte  sidebar.svelte
src/lib/components/agent-list/: index.tsx  item.tsx  operations.tsx
src/lib/components/agent-template-details/: index.tsx
src/lib/components/agent-template-list/: index.tsx  item.tsx  operations.tsx
src/lib/components/app-bar/: index.tsx  tab-link.svelte  tab-link.tsx
src/lib/components/chatbox/: bubble-list.svelte  chat-bubble.svelte  chat-feed.svelte  prompt-entry.svelte  session-list.svelte  status-indicator.svelte
src/lib/components/code-block/: code-block.svelte
src/lib/components/color-mode/: provider.tsx
src/lib/components/custom-ui/: chat-history-loading-alert.svelte  countdown.svelte  loading.svelte  micro-button.svelte  relative-time.svelte  status-dot.svelte
src/lib/components/h2h-panel/: index.tsx
src/lib/components/loader-spin/: index.tsx
src/lib/components/model-page/: countdown.tsx  model-details.tsx  model-list-item.tsx  model-list.tsx  pull-model.tsx  (+2 more)
src/lib/contexts/: chat-entry.tsx  edit-mode.tsx  model-search-result.tsx  session-mode.tsx
src/lib/highlight/: AGENTS.md  index.ts  langs.ts  placeholder-processor.ts  shiki.ts
src/lib/markdown/: index.ts
src/lib/models/: agent-template.ts  agent.ts  chat.ts  errors.ts  feed.ts  images.ts  llm.ts  model-item.ts  models.ts  prompts.ts  section.ts  session.ts  sessions.ts  settings.ts  user.ts
src/lib/schemas/: agent-template.ts  agent.ts  chat.ts  errors.ts  images.ts  model-item.ts  session.ts  settings.ts
src/lib/search/: model-search.ts
src/lib/settings/: schema.ts  types.ts
src/lib/stores/: chats.ts  model-list.ts  model-search.ts  models.ts  prompt-input.ts  pull-model.ts  refreshable.ts  sessions.ts  settings.ts
src/lib/utils/: add-images.ts  agents.ts  alerts.ts  chat-streams.ts  commands.ts  images.ts  model-name.ts  regen.ts  strings.ts  update.ts
src/lib/viewmodels/: option.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  index.tsx
src/routes/agent-templates/: index.tsx
src/routes/h2h/: index.tsx
src/routes/models/: +page.svelte  index.tsx
src/routes/settings/: +page.svelte  index.tsx
(+225 files in other folders)
