[package]
name = "ollama-lab_api"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { version = "0.7", features = ["http2", "multipart", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
ollama-lab_db-desktop = { version = "*", path = "../db-desktop" }
ollama-rest = { version = "*", path = "../../ollama-rest-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

[features]
default = []
