[package]
name = "ollama-lab_db-desktop"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
diesel = { version = "2.2", features = ["chrono", "sqlite"] }
diesel_migrations = { version = "2.2", features = ["sqlite"] }
