[package]
name = "ollama-lab_db-desktop"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["chrono", "runtime-tokio", "sqlite"] }
