[package]
name = "ollama-lab"
description = "Yet another Ollama GUI"
default-run = "ollama-lab"

version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "ollama_lab_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = ["config-toml"] }

[dependencies]
rand = "0.8"
ollama-lab_db-desktop = { path = "../db-desktop" }
ollama-rest = "0.3"
tauri = { version = "2.0.0-rc", features = ["config-toml"] }
tokio = { version = "^1.39", features = ["full"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite"] }
dirs = "5.0"
serde_json = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
