[package]
name = "ollama-lab"
version = "0.1.2"
description = "Ollama Lab"
authors = ["Charles Dong <chardon_cs@proton.me>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ollama_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "^1.42", features = ["full", "mio"] }
ollama-rest = "0.5"
sqlx = { version = "^0.8.3", features = ["chrono", "sqlite", "runtime-tokio"] }
dirs = "6"
toml = "^0.8.19"

tauri = { version = "2", features = ["config-toml"] }

tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
